--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "Stylecraft"
   ],
   "author": {
-    "name": "Aydin Ghane Kh.",
-    "email": "aydin.ghane.kh@gmail.com",
+    "name": "HAHZ",
+    "email": "info@luvnft.com",
     "url": "http://iding.ir"
   },
   "license": "ISC",
