--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "realestate-map",
   "version": "1.0.1",
-  "description": "Real estate map filter with React.",
+  "description": "LUV METAVERSE LUV NFT MAP",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -21,8 +21,8 @@
     "Stylecraft"
   ],
   "author": {
-    "name": "Aydin Ghane Kh.",
-    "email": "aydin.ghane.kh@gmail.com",
+    "name": "WIZARD OF HAHZ",
+    "email": "hahz5d@pm.me",
     "url": "http://iding.ir"
   },
   "license": "ISC",
@@ -30,15 +30,17 @@
     "url": "https://github.com/iding-ir/realestate-map/issues"
   },
   "dependencies": {
+    "fsevents": "^2.3.2",
     "mapbox-gl": "^1.5.0",
     "mapcraft": "^0.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-image-gallery": "^0.9.1",
     "react-input-range": "^1.3.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.0.1",
     "stylecraft": "^0.1.1",
-    "terraformer": "^1.0.9"
+    "terraformer": "^1.0.9",
+    "typescript": "^3.9.10"
   },
   "eslintConfig": {
     "extends": "react-app"
